--- a/inventory.ini
+++ b/inventory.ini
@@ -18,3 +18,8 @@ shipping.vivekdevops.online
 rabbitmq.vivekdevops.online
 [payment]
 payment.vivekdevops.online
+[localhost]
+localhost
+
+[all:vars]
+ansible_password=DevOps321
