--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -8,13 +8,13 @@
     name: mongodb-org-shell
     state: present
 
-- name: get the entries count
+- name: get the catalogue entries count
   ansible.builtin.shell: mongo --host {{MONGODB_HOST} --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
   register: products_count
   when: component="catalogue"
 
 
-- name: get the entries count
+- name: get the user entries count
   ansible.builtin.shell: mongo --host {{MONGODB_HOST} --quiet --eval 'db = db.getSiblingDB("user"); db.products.count()'
   register: user_count
   when: component="user"
