--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -9,13 +9,13 @@
     state: present
 
 - name: get the catalogue entries count
-  ansible.builtin.shell: mongo --host {{MONGODB_HOST} --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
+  ansible.builtin.shell: mongo --host {{MONGODB_HOST}} --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
   register: products_count
   when: component="catalogue"
 
 
 - name: get the user entries count
-  ansible.builtin.shell: mongo --host {{MONGODB_HOST} --quiet --eval 'db = db.getSiblingDB("user"); db.products.count()'
+  ansible.builtin.shell: mongo --host {{MONGODB_HOST}} --quiet --eval 'db = db.getSiblingDB("user"); db.products.count()'
   register: user_count
   when: component="user"
 
