--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -16,7 +16,7 @@
 
 - name: get the user entries count
   ansible.builtin.shell: mongo --host {{MONGODB_HOST}} --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
-  register: user_count
+  register: users_count
   when: component == "user"
 
 - name: "load catalogue data"
