--- a/roles/common/tasks/python.yaml
+++ b/roles/common/tasks/python.yaml
@@ -7,7 +7,9 @@
   - gcc
   - python3-devel
 
-- name: Install dependencies
-  ansible.builtin.command: pip3 install -r requirements.txt
+- name: install dependencies
+  ansible.builtin.pip:
+    requirements: requirements.txt
+    executable: pip3.9
   args:
     chdir: /app
