--- a/roles/common/tasks/python.yaml
+++ b/roles/common/tasks/python.yaml
@@ -7,9 +7,7 @@
   - gcc
   - python3-devel
 
-- name: install dependencies
-  ansible.builtin.pip:
-    requirements: requirements.txt
-    executable: pip3
+- name: Install dependencies
+  ansible.builtin.command: pip3.6 install -r requirements.txt
   args:
     chdir: /app
