--- a/roles/common/tasks/python.yaml
+++ b/roles/common/tasks/python.yaml
@@ -8,6 +8,6 @@
   - python3-devel
 
 - name: Install dependencies
-  ansible.builtin.command: pip3.6 install -r requirements.txt
+  ansible.builtin.shell: pip3.6 install -r requirements.txt
   args:
     chdir: /app
