--- a/inventory.ini
+++ b/inventory.ini
@@ -18,6 +18,8 @@ shipping.vivekdevops.online
 rabbitmq.vivekdevops.online
 [payment]
 payment.vivekdevops.online
+[dispatch]
+dispatch.vivekdevops.online
 [localhost]
 localhost
 
