--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -24,21 +24,21 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-- name: copy roboshop configuration
-  ansible.builtin.copy:
-    src: roboshop.conf
-    dest: /etc/nginx/default.d/roboshop.conf
+# - name: copy roboshop configuration
+#   ansible.builtin.copy:
+#     src: roboshop.conf
+#     dest: /etc/nginx/default.d/roboshop.conf
 
-- name: start and enable nginx
-  ansible.builtin.service:
-    name: nginx
-    state: restarted
+# - name: start and enable nginx
+#   ansible.builtin.service:
+#     name: nginx
+#     state: restarted
     enabled: yes
 
-# - name: copy roboshop configuration
-#   ansible.builtin.template:
-#     src: roboshop.conf.j2
-#     dest: /etc/nginx/default.d/roboshop.conf
-#   notify:
-#   - Restart nginx
+- name: copy roboshop configuration
+  ansible.builtin.template:
+    src: roboshop.conf.j2
+    dest: /etc/nginx/default.d/roboshop.conf
+  notify:
+  - Restart nginx
 
